aprx: disable on musl
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/aprx/Makefile
+++ b/net/aprx/Makefile
@@ -27,6 +27,7 @@ define Package/aprx
   CATEGORY:=Network
   TITLE:=APRS RX only I-gate
   URL:=http://ham.zmailer.org/oh2mqk/aprx/
+  DEPENDS:=@!USE_MUSL
 endef
 
 define Package/aprx/description
