[packages] libnet-1.1.x: fix build
some dirs were not created leading to build fails

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/libs/libnet-1.1.x/Makefile
+++ b/libs/libnet-1.1.x/Makefile
@@ -48,10 +48,14 @@ CONFIGURE_VARS += \
 	LL_INT_TYPE=libnet_link_linux
 
 define Build/InstallDev
+	$(INSTALL_DIR) $(1)/usr/lib/libnet-1.1.x
+
 	$(INSTALL_DIR) $(1)/usr/lib/libnet-1.1.x/bin
 	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/libnet-config $(1)/usr/lib/libnet-1.1.x/bin/
+
 	$(INSTALL_DIR) $(1)/usr/lib/libnet-1.1.x/include
 	$(CP) $(PKG_INSTALL_DIR)/usr/include/libnet* $(1)/usr/lib/libnet-1.1.x/include/
+
 	$(INSTALL_DIR) $(1)/usr/lib/libnet-1.1.x/lib
 	$(CP) $(PKG_INSTALL_DIR)/usr/lib/libnet.{a,so*} $(1)/usr/lib/libnet-1.1.x/lib/
 endef
