--- a/libs/matrixssl/Makefile
+++ b/libs/matrixssl/Makefile
@@ -17,6 +17,7 @@ PKG_MD5SUM:=2ed37e14b181bbc58e42d08ad05858fe
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)-open
 PKG_BUILD_PARALLEL:=1
+PKG_USE_MIPS16:=0
 
 include $(INCLUDE_DIR)/package.mk
 
