wing: fix musl build
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/wing/Makefile
+++ b/net/wing/Makefile
@@ -48,6 +48,7 @@ CONFIGURE_ARGS += \
 	--enable-wing \
 	--enable-diffserv \
 	--disable-linuxmodule \
+	--disable-bsdmodule \
 	--disable-dynamic-linking \
 
 HOST_CONFIGURE_ARGS += \
