radvd: fix musl build
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/ipv6/radvd/Makefile
+++ b/ipv6/radvd/Makefile
@@ -8,14 +8,15 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=radvd
-PKG_VERSION:=1.9.1
-PKG_RELEASE:=2
+PKG_VERSION:=2.11
+PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=http://v6web.litech.org/radvd/dist \
 		http://download.sourcemage.org/mirror
-PKG_MD5SUM:=e807ad7e9a76d46b6133df391385cd31
+PKG_MD5SUM:=57fc6021f6a5e5472e455937685472a3
 
+PKG_FIXUP:=autoreconf
 PKG_INSTALL:=1
 
 include $(INCLUDE_DIR)/package.mk
@@ -51,6 +52,8 @@ radvdump prints out the contents of incoming router advertisements sent by radvd
 or some other software implementing (parts of) "Neighbor Discovery for IP
 Version 6 (IPv6)" (RFC 4861).
 endef
+
+TARGET_CFLAGS+=-std=gnu99
 
 CONFIGURE_ARGS += \
 	--with-configfile=/etc/radvd.conf \
