--- a/multimedia/kissdx/Makefile
+++ b/multimedia/kissdx/Makefile
@@ -42,7 +42,7 @@ define Build/Compile
 	$(MAKE) -C $(PKG_BUILD_DIR) \
 		CFLAGS="$(TARGET_CFLAGS) -DLinux -DUSE_INTERNAL_SENDFILE -std=gnu99 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -DFILE_OFFSET_BITS=64 -D_GNU_SOURCE -I$(ICONV_PREFIX)/include -I$(STAGING_DIR)/usr/include/dvdread $(TARGET_CPPFLAGS) $(TARGET_LDFLAGS) -L$(ICONV_PREFIX)/lib" \
 		LDFLAGS="-L$(ICONV_PREFIX)/lib $(TARGET_LDFLAGS)" \
-		STRIP=$(STRIP) \
+		STRIP="$(STRIP)" \
 		IconvExternal=defined \
 		CC="$(TARGET_CROSS)gcc" all
 endef
