etherpuppet: fix musl build
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/etherpuppet/Makefile
+++ b/net/etherpuppet/Makefile
@@ -35,6 +35,8 @@ define Package/etherpuppet/description
   through a TCP connection.
 endef
 
+TARGET_CFLAGS+=-D_GNU_SOURCE
+
 define Build/Configure
 endef
 
