--- a/net/isakmpd/Makefile
+++ b/net/isakmpd/Makefile
@@ -16,6 +16,7 @@ PKG_SOURCE_URL:=http://ftp.debian.org/debian/pool/main/i/isakmpd/
 PKG_MD5SUM:=e6d25a9e232fb186e1a48dc06453bd57
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION).orig
+PKG_CHECK_FORMAT_SECURITY:=0
 
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/kernel.mk
@@ -34,7 +35,7 @@ define Build/Compile
 	$(MAKE) -C $(PKG_BUILD_DIR) \
 		$(TARGET_CONFIGURE_OPTS) \
 		LINUX_DIR="$(LINUX_DIR)" \
-		EXTRA_CPPFLAGS="$(TARGET_CPPFLAGS) -I$(STAGING_DIR)/usr/include/openssl -I$(STAGING_DIR)/usr/include/keynote" \
+		EXTRA_CPPFLAGS="$(TARGET_CPPFLAGS) -D_GNU_SOURCE -I$(STAGING_DIR)/usr/include/openssl -I$(STAGING_DIR)/usr/include/keynote" \
 		EXTRA_LDFLAGS="$(TARGET_LDFLAGS)"
 
 	$(MAKE) -C $(PKG_BUILD_DIR) \
