peerguardian: fix build with musl
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/peerguardian/Makefile
+++ b/net/peerguardian/Makefile
@@ -40,6 +40,8 @@ define Package/peerguardian/conffiles
 /etc/p2p.p2b.p2p
 endef
 
+TARGET_CFLAGS+= -D_GNU_SOURCE
+
 CONFIGURE_ARGS += \
 	--enable-lowmem \
 	--without-qt4 \
