--- a/utils/bemused/Makefile
+++ b/utils/bemused/Makefile
@@ -16,6 +16,7 @@ PKG_SOURCE_URL:=http://download.origo.ethz.ch/bemused-lnx-mpdhack/526
 PKG_MD5SUM:=aed8b41aed530e9177e43d9bebad10b7
 
 PKG_BUILD_PARALLEL:=1
+PKG_CHECK_FORMAT_SECURITY:=0
 
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/nls.mk
@@ -23,7 +24,7 @@ include $(INCLUDE_DIR)/nls.mk
 define Package/bemusedlinuxserver
   SECTION:=utils
   CATEGORY:=Utilities
-  DEPENDS:=+bluez-libs +glib1 +mpd +libstdcpp $(ICONV_DEPENDS)
+  DEPENDS:=+bluez-libs +glib2 +mpd +libstdcpp $(ICONV_DEPENDS)
   TITLE:=Bemused linux server
   URL:=http://bemused-lnx-mpdhack.origo.ethz.ch/
 endef
@@ -36,8 +37,9 @@ define Package/bemusedlinuxserver/description
 endef
 
 EXTRA_CPPFLAGS:= \
-	-I$(STAGING_DIR)/usr/include/glib-1.2 \
-	-I$(STAGING_DIR)/usr/lib/glib/include
+	-I$(STAGING_DIR)/usr/include/glib-2.0
+
+#	-I$(STAGING_DIR)/usr/lib/glib/include
 
 define Build/Compile
 	+$(MAKE) $(PKG_JOBS) -C $(PKG_BUILD_DIR) \
@@ -46,7 +48,7 @@ define Build/Compile
 		CXXFLAGS="$(TARGET_CFLAGS) $(EXTRA_CFLAGS)" \
 		LDFLAGS="$(TARGET_LDFLAGS) $(EXTRA_LDFLAGS)" \
 		CPPFLAGS="$(TARGET_CPPFLAGS) $(EXTRA_CPPFLAGS)" \
-		LDLIBS="-lbluetooth -lglib -liconv"
+		LDLIBS="-lbluetooth -lglib-2.0 -liconv"
 endef
 
 define Package/bemusedlinuxserver/install
