--- a/utils/hplip/Makefile
+++ b/utils/hplip/Makefile
@@ -25,7 +25,7 @@ define Package/hplip
   CATEGORY:=Utilities
   TITLE:=HP Linux Imaging and Printing
   URL:=http://sourceforge.net/projects/hplip/
-  DEPENDS+=+libjpeg +libtiff +libusb-compat +cups +sane-libs
+  DEPENDS+=+libjpeg +libtiff +libusb-compat +cups +sane-libs +libpng
 endef
 
 define Package/hplip/description
