libpar2: libsig++ requires C++11/GNU++11 dialect
fixes build error (compile from omap arch):

In file included from
...target-mipsel_mips32_gcc-4.8-linaro_musl-1.1.11/mipsel-openwrt-linux-musl/include/c++/4.8.3/type_traits:35:0,
...target-mipsel_mips32_musl-1.1.11/usr/include/sigc++-2.0/sigc++/visit_each.h:22,
...target-mipsel_mips32_musl-1.1.11/usr/include/sigc++-2.0/sigc++/functors/slot.h:6,
...target-mipsel_mips32_musl-1.1.11/usr/include/sigc++-2.0/sigc++/signal_base.h:27,
                 from ...target-mipsel_mips32_musl-1.1.11/usr/include/sigc++-2.0/sigc++/signal.h:8,
                 from ...target-mipsel_mips32_musl-1.1.11/usr/include/sigc++-2.0/sigc++/sigc++.h:86,
                 from libpar2.h:4,
                 from libpar2.cpp:1:

...mipsel-openwrt-linux-musl/include/c++/4.8.3/bits/c++0x_warning.h:32:2:
error: #error This file requires compiler and library support for the ISO C++ 2011 standard.
This support is currently experimental, and must be enabled with the -std=c++11 or
-std=gnu++11 compiler options.

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/libs/libpar2/Makefile
+++ b/libs/libpar2/Makefile
@@ -32,6 +32,8 @@ define Package/libpar2/description
 A library for performing common tasks related to PAR recovery sets
 endef
 
+TARGET_CXXFLAGS+=--std=gnu++11
+
 CONFIGURE_ARGS += \
 	--disable-static \
 	--disable-nls \
