pepperspot: remove obsolete kmod-ipv6 depends
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/pepperspot/Makefile
+++ b/net/pepperspot/Makefile
@@ -25,7 +25,7 @@ define Package/pepperspot
   CATEGORY:=Network
   TITLE:=Wireless LAN HotSpot controller
   URL:=http://pepperspot.sourceforge.net/
-  DEPENDS:=+kmod-tun +kmod-ipv6
+  DEPENDS:=+kmod-tun
 endef
 
 define Package/pepperspot/description
